2009-03-20  Callum McKenzie  <callum@spooky-possum.org>

	* src/cpufreq-monitor.c: Patch from gQuigs to replace
	g_timeout_add with g_timeout_add_seconds where appropriate. Bug
	57360.

==================== 2.26.0 ======================

2009-03-08  Albert Damen  <albrt@gmx.net>

	* src/cpufreq-selector/cpufreq-selector-service.c: Make enum error 
	values array static. Fixes bug #573762.
	
==================== 2.25.92 ======================

==================== 2.25.91 ======================

==================== 2.25.90 ======================

==================== 2.25.3 ======================

2008-12-31  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-applet.c: (cpufreq_applet_init): Remove
	change_background callback since it's already implemented by
	libpanel-applet. 
	
==================== 2.25.2 ======================

2008-12-15  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-applet.c: (cpufreq_applet_update_visibility),
	(cpufreq_applet_update), (cpufreq_applet_setup): Fix visibility
	when switching between graph and text modes. Based on patch by
	Diego Escalante Urrelo. Fixes bug #471988.
	
2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-applet.c: (cpufreq_applet_init),
	(cpufreq_applet_setup): Show the applet when the setup is done
	rather than in the init method.
	
2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-monitor-sysfs.c:
	* src/cpufreq-selector/cpufreq-selector-procfs.c:
	* src/cpufreq-selector/cpufreq-selector-sysfs.c:
	* src/cpufreq-utils.c:
	* src/cpufreq-prefs.c:
	* src/cpufreq-selector.c:
	* src/cpufreq-monitor-procfs.c:
	* src/cpufreq-monitor-cpuinfo.c: Fix several compile warnings.
	
2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-applet.c: (cpufreq_applet_size_request),
	(cpufreq_applet_refresh): Fix size requisition. If the applet is
	using a vbox in an horixontal panel, the required width is not