@@ -99,7 +99,7 @@
                     <child>
                       <object class="GtkLabel" id="label18">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">    </property>
+                        <property name="label" translatable="no">    </property>
                         <property name="use_underline">False</property>
                         <property name="use_markup">False</property>
                         <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -220,7 +220,7 @@
                     <child>
                       <object class="GtkLabel" id="label20">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">    </property>
+                        <property name="label" translatable="no">    </property>
                         <property name="use_underline">False</property>
                         <property name="use_markup">False</property>
                         <property name="justify">GTK_JUSTIFY_LEFT</property>
