@@ -115,7 +115,7 @@
                         <child>
                           <object class="GtkLabel" id="label25">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">    </property>
+                            <property name="label" translatable="no">    </property>
                             <property name="use_underline">False</property>
                             <property name="use_markup">False</property>
                             <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -197,7 +197,7 @@
                         <child>
                           <object class="GtkLabel" id="label27">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">    </property>
+                            <property name="label" translatable="no">    </property>
                             <property name="use_underline">False</property>
                             <property name="use_markup">False</property>
                             <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -351,7 +351,7 @@
                         <child>
                           <object class="GtkLabel" id="label29">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">    </property>
+                            <property name="label" translatable="no">    </property>
                             <property name="use_underline">False</property>
                             <property name="use_markup">False</property>
                             <property name="justify">GTK_JUSTIFY_LEFT</property>
