@@ -39,7 +39,7 @@
                     <child>
                       <widget class="GtkLabel" id="label14">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">    </property>
+                        <property name="label" translatable="no">    </property>
                       </widget>
                       <packing>
                         <property name="expand">False</property>
@@ -295,7 +295,7 @@
                     <child>
                       <widget class="GtkLabel" id="label32">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">    </property>
+                        <property name="label" translatable="no">    </property>
                       </widget>
                       <packing>
                         <property name="expand">False</property>
@@ -823,7 +823,7 @@ This cannot be undone.</property>
                     <child>
                       <widget class="GtkLabel" id="label36">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">    </property>
+                        <property name="label" translatable="no">    </property>
                       </widget>
                       <packing>
                         <property name="expand">False</property>
