@@ -96,7 +96,7 @@
                     <child>
                       <object class="GtkLabel" id="label14">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">    </property>
+                        <property name="label" translatable="no">    </property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -347,7 +347,7 @@
                     <child>
                       <object class="GtkLabel" id="label32">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">    </property>
+                        <property name="label" translatable="no">    </property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -838,7 +838,7 @@ This cannot be undone.</property>
                     <child>
                       <object class="GtkLabel" id="label36">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">    </property>
+                        <property name="label" translatable="no">    </property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
