@@ -1,3 +1,9 @@
+2009-04-06  Callum McKenzie  <callum@spooky-possum.org>
+
+	* src/mini-commander.glade: 
+	* src/mini-commander.ui: Remove translatable flag from padding
+	strings. Bug 577510.
+
 2009-03-20  Callum McKenzie  <callum@spooky-possum.org>
 
 	* src/mc-default-macros.h (mc_default_macros): Add https
