@@ -1,3 +1,9 @@
+2009-04-06  Callum McKenzie  <callum@spooky-possum.org>
+
+	* stickynotes.glade: 
+	* stickynotes.ui: Remove translatable flag from padding
+	strings. Bug 577509.
+
 2009-03-20  Callum McKenzie  <callum@spooky-possum.org>
 
 	* stickynotes.c: Patch from gQuigs to replace g_timeout_add with
