@@ -1,3 +1,9 @@
+2009-04-06  Callum McKenzie  <callum@spooky-possum.org>
+
+	* cpufreq-preferences.ui:
+	* cpufreq-preferences.glade: Remove translatable flag from padding
+	strings. Bug 577511.
+
 2009-03-20  Callum McKenzie  <callum@spooky-possum.org>
 
 	* src/cpufreq-monitor.c: Patch from gQuigs to replace
